src/test/deca/codegen/valid/created/objet/methcallfield.deca
class A {
    int x;
    int m(){
        return x;
    }
}


{
    A a =new A();
    if(a.m() == 0){
        println("passed");
    } else {
        println("error");
    }

}